Fix linear gradient colour on collapsed statuses in a few skins

--- a/app/javascript/flavours/glitch/styles/arachnia/diff.scss
+++ b/app/javascript/flavours/glitch/styles/arachnia/diff.scss
@@ -75,6 +75,10 @@
 		margin: 0em 0.5em 1em 0em;
 	}
 
+	.status.collapsed .status__content:after {
+		background: linear-gradient(transparentize(#302, 1), #302) !important;
+	}
+
 	// TL status prefix: move origin user text closer to icon
 	.notification__message,
 	.status__prepend {
