--- a/app/javascript/flavours/glitch/styles/seadrake/diff.scss
+++ b/app/javascript/flavours/glitch/styles/seadrake/diff.scss
@@ -76,6 +76,10 @@
 		margin: 0em 0.5em 1em 0em;
 	}
 
+	.status.collapsed .status__content:after {
+		background: linear-gradient(transparentize(#032, 1), #032) !important;
+	}
+
 	// TL status prefix: move origin user text closer to icon
 	.notification__message,
 	.status__prepend {
